# simulacion-problemas-clasicos

./: .gitignore  README.md  pyproject.toml  requeriments.txt  setup.py
simulacion_problemas_clasicos/: __init__.py  __main__.py  cli.py  utils.py
simulacion_problemas_clasicos/modules/: dekker.py  filosofos_comensales.py
